--- a/Proyecto Sitio PDF/prueba.html
+++ b/Proyecto Sitio PDF/prueba.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Registro con pdf</title>
+        <title>GIT-HUB</title>
         <meta name="encoding" charset="utf-8" />
         <meta name="description" content="Una pagina de estado educativo donde se propone la visualizacion de pdf y asi como un registro de datos
         mismos que se imprimen en un pdf proporcionado por la pagina" />
